--- a/HRM/HRM/HRM.csproj
+++ b/HRM/HRM/HRM.csproj
@@ -168,18 +168,39 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DeptsController.cs" />
+    <Compile Include="Controllers\DivisionsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904121108349_mig01.cs" />
+    <Compile Include="Migrations\201904121108349_mig01.Designer.cs">
+      <DependentUpon>201904121108349_mig01.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201904121211516_mig02.cs" />
+    <Compile Include="Migrations\201904121211516_mig02.Designer.cs">
+      <DependentUpon>201904121211516_mig02.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201904121226497_mig03.cs" />
+    <Compile Include="Migrations\201904121226497_mig03.Designer.cs">
+      <DependentUpon>201904121226497_mig03.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Dept.cs" />
+    <Compile Include="Models\Division.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-HRMDB.mdf" />
+    <Content Include="App_Data\aspnet-HRMDB_log.ldf">
+      <DependentUpon>aspnet-HRMDB.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -234,9 +255,27 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Divisions\Create.cshtml" />
+    <Content Include="Views\Divisions\Delete.cshtml" />
+    <Content Include="Views\Divisions\Details.cshtml" />
+    <Content Include="Views\Divisions\Edit.cshtml" />
+    <Content Include="Views\Divisions\Index.cshtml" />
+    <Content Include="Views\Depts\Create.cshtml" />
+    <Content Include="Views\Depts\Delete.cshtml" />
+    <Content Include="Views\Depts\Details.cshtml" />
+    <Content Include="Views\Depts\Edit.cshtml" />
+    <Content Include="Views\Depts\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <EmbeddedResource Include="Migrations\201904121108349_mig01.resx">
+      <DependentUpon>201904121108349_mig01.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904121211516_mig02.resx">
+      <DependentUpon>201904121211516_mig02.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904121226497_mig03.resx">
+      <DependentUpon>201904121226497_mig03.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
